[package]
name = "line"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11"}
tokio = {features=["full"], version = "1.0"}
serde = {version = "1", features=["derive"]}
serde_json = {version = "1"}